# Photidy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Justfile  Makefile  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yaml
runtime/: db_manager.py  extraction.py  paths.py
rust/_photidy/: Cargo.toml
rust/_photidy/src/: compat.rs  db.rs  errors.rs  exif.rs  geocode.rs  gps.rs  haversine.rs  lib.rs  models.rs  scoring.rs
rust/metadata/: cargo.toml
rust/photidy/: Cargo.toml
rust/photidy/src/: exif.rs  lib.rs
rust/photo_meta/: Cargo.toml  cargo.toml
rust/photo_meta/src/: compat.rs  db.rs  errors.rs  exif.rs  geocode.rs  gps.rs  haversine.rs  lib.rs  models.rs  scoring.rs
rust/photo_meta/tests/: exif_integration_tests.rs  lib_integration_tests.rs
scripts/: build_places_db.py  build_rust.py  cargo_check.py  clean.py  constants.py  test_rust.py
src/cli/: cli.py  utils.py
src/cli/commands/: organise.py  scan.py  undo.py
src/core/: image_info.py  metadata.py  organiser.py
src/runtime/: db_runtime.py  paths.py
src/ui/: constants.py  frame_main.py  main.py  main_window.py  menubar.py  threads.py
src/ui/containers/: main_container.py
src/ui/dialogs/: __init__.py  about.py  confirm.py  settings.py
src/ui/panels/: scan_panel.py
src/ui/utils/: __init__.py  svg_utils.py
src/ui/views/: __init__.py  progress.py  results.py  setup.py  summary.py
src/ui/widgets/: __init__.py  button.py  custom_button.py  folder_selector.py
src/utils/: constants.py  errors.py  logger.py  paths.py
tests/: __init__.py  conftest.py  test_errors.py  test_integration.py  test_logger.py  test_metadata.py  test_organiser.py  test_runtime.py
