[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "photidy"
version = "0.2.0"
description = "A simple photo organisation tool"
requires-python = ">=3.11"
authors = [
    {name = "Rob Webb", email = "rdawebb@gmail.com"}
]
dependencies = [
    "appdirs>=1.4,<2.0",
    "pyside6>=6.8,<6.9",
    "typer-extensions>=0.2.2,<1.0.0"
]

[project.optional-dependencies]
dev = [
    "icecream>=2.1.10,<3.0.0",
    "maturin>=1.12.6,<2.0",
    "prek>=0.3.8,<1.0.0",
    "pytest>=9.0.2,<10.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "ruff>=0.15.7,<1.0.0",
    "rust-just>=1.48.0,<2.0.0",
    "ty>=0.0.24,<0.1.0",
]

[project.scripts]
photidy = "src.cli.cli:app"

[tool.maturin]
module-name = "_photidy"
python-packages = ["src"]
manifest-path = "rust/_photidy/Cargo.toml"
